tableau component and templates

--- a/TODO
+++ b/TODO
@@ -7,5 +7,5 @@
 ✔ modules routing @done(20-07-21 14:31)
 ✔ enable tracing @done(20-07-21 14:31)
 ✔ router events @done(20-07-21 14:31)
-☐
+☐ Templates
 
