--- a/TODO
+++ b/TODO
@@ -8,4 +8,9 @@
 ✔ enable tracing @done(20-07-21 14:31)
 ✔ router events @done(20-07-21 14:31)
 ☐ Templates
+☐ pipes
+☐ pipe perso
+☐ pipe async
+☐ directive perso
+
 
